HISTORY
=======

History of changes to PHC (name of developer listed in brackets)::

    PloneHelpCenter 4.0b4 (unreleased)

    - Make ManualPage addable through tempfolder
      [tiberiuichim]

    - Make the knowledge base type not globally addable.
      [davisagli]

    - Make it possible to filter phc_search by getVersions
      [davisagli @ cioppino]

    - Improved styling of portlet_phc_about
      [davisagli, hennaheto @ cioppino]

    PloneHelpCenter 4.0b3 (2011-05-12)

    - Clean up package and release
      [aclark]
    
    - Update discussion_reply.cpy to keep in sync with Plone.
      [davisagli]
    
    - Add subnavigation to most templates.
      [smcmahon]
    
    - Revamp helpcenter_topicview_main to show start-here items,
      topic counts.
      [davisagli]

    - Add getPHCSubNav method for PloneHelpCenter to create subnavigation.
      [stevem]

    - Added metadata.xml file, used by QuickInstaller when upgrading
      [afd]

    PloneHelpCenter 4.0b2 (2010-12-28)

    - Fix phc_stats template in Plone 4.
      [davisagli]

    - Fix import error in Plone 3.
      [miohtama]

    - Use the containment acquisition chain to get the parent
      attributes in ReferenceManualSection type.
      [dukebody]

    - Make listings respect the subtopics order set in the HelpCenter
      or type folders, instead of sorting alphabetically.
      Fixes http://plone.org/products/plonehelpcenter/issues/127.
      [dukebody]

    PloneHelpCenter 4.0b1 (2010-12-09)

    - Use ordering adapters in Plone 4 to sort items in sections.
      [dukebody]

    - Make the default view for PHC folders obey the items ordering
      set using the Contents tab. Formerly, they were sorted
      alphabetically by title.
      Fixes http://plone.org/products/plonehelpcenter/issues/121.
      [dukebody]

    - Allow all site-enabled markup types for PHC content, instead of
      a fixed list.
      Fixes http://plone.org/products/plonehelpcenter/issues/117.