@@ -76,7 +76,7 @@
         </p>
     
         <p>
-          <img tal:replace="structure here/rss.gif" />
+          <img tal:replace="structure here/rss.png" />
           <a tal:attributes="href view/getSyndicationURL" 
              i18n:translate="phc_rss_all">
             Feed for all documentation.
