@@ -58,8 +58,8 @@
            tal:define="here_url context/@@plone_context_state/object_url"
            tal:attributes="href string:$here_url/search_rss?${request/QUERY_STRING}">
         <img i18n:attributes="title alt"
-             tal:attributes="src string:$portal_url/rss.gif"
-             src="rss.gif"
+             tal:attributes="src string:$portal_url/rss.png"
+             src="rss.png"
              alt="RSS Feed"
              title="RSS feed of these search results" />
         </a>
