@@ -74,7 +74,7 @@
                                  ('HelpCenterInstructionalVideoFolder','HelpCenterInstructionalVideo'));
                 subtypes python:[t[0] for t in subtypes_tuples];
                 rss_subtypes python:[t[1] for t in subtypes_tuples];">
-  <img tal:replace="structure here/rss.gif" />
+  <img tal:replace="structure here/rss.png" />
   <a tal:attributes="href view/getSyndicationURL"
      i18n:translate="phc_rss_all">
     Subscribe to updates using RSS
